Releases/V1.0.10.2/readme.md
Release V1.0.10.2.

<br><br>
<br><br>
Files for each platform:
- Espressif DevKit-C with 2 MB PSRAM (Quad SPI):<br>
TonexOneController_V1.0.10.2_DevKitC_N8R2.zip
<br><br>
- Espressif DevKit-C with 8 MB PSRAM (Octal SPI):<br>
TonexOneController_V1.0.10.2_DevKitC_N16R8.zip
<br><br>
- M5Stack Atom S3R:<br>
TonexOneController_V1.0.10.2_M5AtomS3R.zip
<br><br>
- Waveshare 1.69" LCD board (no Touch):<br>
TonexOneController_V1.0.10.2_Waveshare_1_69.zip
<br><br>
- Waveshare 1.69" LCD board (no Touch) Landscape mode:<br>
TonexOneController_V1.0.10.2_Waveshare_1_69land.zip
<br><br>
- Waveshare 1.69" Touch LCD board:<br>
TonexOneController_V1.0.10.2_Waveshare_1_69_Touch.zip
<br><br>
- Waveshare 4.3B board, Amplifier skin images:<br>
TonexOneController_V1.0.10.2_Waveshare_4_3B_Display_Amp_Skins.zip
<br><br>
- Waveshare 4.3B board, Pedal skin images:<br>
TonexOneController_V1.0.10.2_Waveshare_4_3B_Display_Pedal_Skins.zip
<br><br>
- Waveshare Zero board:<br>
TonexOneController_V1.0.10.2_Waveshare_Zero.zip
<br><br>
- Pirate Midi Polar Pico:<br>
TonexOneController_V1.0.10.2_PirateMidi_PolarPico.zip
<br><br>
- Pirate Midi Polar Mini:<br>
TonexOneController_V1.0.10.2_PirateMidi_PolarMini.zip
<br><br>
- Pirate Midi Polar Plus:<br>
TonexOneController_V1.0.10.2_PirateMidi_PolarPlus.zip

