Releases/V2.0.0.2/readme.md
<br>
V2.0.0.2 released 4 October 2025.
<br><br>
CAUTION: due to differences in the configuration storage, it is recommended to perform an Erase before updating from older versions. This can be done with the programming software or web page method. 
<br>Erase the memory, then program the release as normal.
<br><br>
Files for each platform:
- Espressif DevKit-C with 2 MB PSRAM (Quad SPI):<br>
TonexController_V2.0.0.2_DevKitC_N8R2.zip
<br><br>
- Espressif DevKit-C with 8 MB PSRAM (Octal SPI):<br>
TonexController_V2.0.0.2_DevKitC_N16R8.zip
<br><br>
- JC3248W 3.5" Amp Skins<br>
TonexController_V2.0.0.2_JC3248W_Display_Amp_Skins.zip
<br><br>
- JC3248W 3.5" Pedal Skins<br>
TonexController_V2.0.0.2_JC3248W_Display_Pedal_Skins.zip
<br><br>
- M5Stack Atom S3R:<br>
TonexController_V2.0.0.2_M5AtomS3R.zip
<br><br>
- Pirate Midi Polar Max:<br>
TonexController_V2.0.0.2_PirateMidi_PolarMax_Amp_Skins.zip
<br><br>
- Pirate Midi Polar Mini:<br>
TonexController_V2.0.0.2_PirateMidi_PolarMini.zip
<br><br>
- Pirate Midi Polar Pico:<br>
TonexController_V2.0.0.2_PirateMidi_PolarPico.zip
<br><br>
- Pirate Midi Polar Plus:<br>
TonexController_V2.0.0.2_PirateMidi_PolarPlus.zip
<br><br>
- Waveshare 1.9" LCD board:<br>
TonexController_V2.0.0.2_Waveshare_1_9.zip
<br><br>
- Waveshare 1.69" LCD board (no Touch):<br>
TonexController_V2.0.0.2_Waveshare_1_69.zip
<br><br>
- Waveshare 1.69" Touch LCD board:<br>
TonexController_V2.0.0.2_Waveshare_1_69_Touch.zip
<br><br>
- Waveshare 1.69" Touch LCD board Landscape mode:<br>
TonexController_V2.0.0.2_Waveshare_1_69_Touch_land.zip
<br><br>
- Waveshare 1.69" LCD board (no Touch) Landscape mode:<br>
TonexController_V2.0.0.2_Waveshare_1_69land.zip
<br><br>
- Waveshare 3.5B board, Amplifier skin images:<br>
TonexController_V2.0.0.2_Waveshare_3_5B_Display_Amp_Skins.zip
<br><br>
- Waveshare 3.5B board, Pedal skin images:<br>
TonexController_V2.0.0.2_Waveshare_3_5B_Display_Pedal_Skins.zip
<br><br>
- Waveshare 4.3B board, Amplifier skin images:<br>
TonexController_V2.0.0.2_Waveshare_4_3B_Display_Amp_Skins.zip
<br><br>
- Waveshare 4.3B board, Pedal skin images:<br>
TonexController_V2.0.0.2_Waveshare_4_3B_Display_Pedal_Skins.zip
<br><br>
- Waveshare Zero board:<br>
TonexController_V2.0.0.2_Waveshare_Zero.zip



